# Test_assignment

./: .env.example  .env.template  .pre-commit-config.yaml  README.md  docker-compose.yml
docs/endpoints/users/: get_all.puml  get_by_surname.puml
users_info/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  start.sh
users_info/cli/: config.py  data_loader.py  data_providers.py  run.py
users_info/cli/data/: mock_data.json  names.json
users_info/data/: names.json  test_data.json
users_info/src/: main.py
users_info/src/api/: routers.py
users_info/src/api/v1/: dependencies.py  emails.py  friends.py  users.py
users_info/src/core/: config.py  constants.py  db.py  exceptions.py  logger.py
users_info/src/migrations/: env.py
users_info/src/migrations/versions/: 2024_03_23_01_base_models_and_relations.py  2024_03_24_00_flush_migration.py  2024_03_24_01_initial_migrations.py  2024_03_27_02_not_null_emails.py  2024_03_27_03_add_friendships.py
users_info/src/models/: __init__.py  emails.py  enums.py  friendships.py  mixins.py  users.py
users_info/src/repositories/: emails.py  friend_requests.py  friends.py  users.py
users_info/src/schemas/: emails.py  friends.py  users.py
users_info/src/services/: base.py  emails.py  friends.py  users.py
users_info/src/utils/: inspect.py  mixins.py  repository.py
